--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="icon" type="image/png" href="images/favicon.png" />
 </head>
 <body>
-    <p>Wlcome to my web</p>
+    <p>Welcome to my web</p>
 </body>
 </html>
